<resources>
    <!-- ############# Actionbar [Top] ############# -->
    <string name="app_name">Online Census</string>
    <string name="action_search">"Suchen"</string>
    <string name="action_settings">"Einstellungen"</string>
    <string name="action_logout" translatable="false">Log out</string>

    <!-- ############# Menu [Bottom] ############# -->
    <string name="nav_title_cantons">Kanton</string>
    <string name="nav_title_search">Suchen</string>
    <string name="nav_title_new">Neu</string>
    <string name="nav_title_profile" translatable="false">"Profil"</string>

    <!-- ############# Titles ############# -->
    <string name="chapter_search">"Suchkriterien"</string>
    <string name="chapter_add">"Neue Person"</string>
    <string name="chapter_profile">"User Details"</string>

    <string name="chapter_resitentDetails" translatable="false">"Details"</string>



    <string name="residents">Residents</string>
    <string name="data_reset">reset data</string>
    <string name="data_initiated">data initiated</string>
    <string name="action_reset">Reset</string>
    <string name="login_successful">Login erfolgreich</string>
    <string name="registration_complete">Registration vollständig</string>
    <string name="registration_first">zuerst registrieren</string>

    <!-- ############# Error ############# -->
    <string name="error_invalid_email">fehlerhafte parameter</string>
    <string name="error_used_email">Email bereits verwendet</string>
    <string name="error_invalid_password">Passwort zu kurz</string>
    <string name="error_edit_invalid_password">Passwort fehlt</string>
    <string name="error_incorrect_password">falsches Passwort</string>
    <string name="error_field_required">Feld erforderlich</string>
    <string name="error_pwd_wrong">Falsches Passwort</string>
    <string name="error_enter_all_information">Bitte alle infos eintragen</string>
    <string name="error_fehler">fehlerhaft</string>

    <!-- ############# Alerts ############# -->
    <string name="alert_delete">Account wirklich löschen?</string>
    <string name="alert_delete_pers">Person wirklich löschen?</string>

    <!-- ############# Personal Details ############# -->
    <!-- Resident -->
    <string name="ahv">AHV-Nummer</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="steet">Strasse</string>
    <string name="zip">PLZ</string>
    <string name="city">Ort</string>
    <string name="phone">Telefonnummer</string>
    <string name="birthdate">Geburtstag</string>
    <!-- User -->
    <string name="county">Gemeinde</string>
    <string name="state">Kanton</string>
    <string name="email" translatable="false">E-Mail</string>
    <string name="check_email">bestätigung E-Mail</string>
    <string name="pwd">Passwort</string>
    <string name="check_pwd">bestätigung Passwort</string>

    <!-- ############# About ############# -->
    <string name="about">Informationen</string>
    <string name="about_version" translatable="false">Version 1.0</string>
    <string name="about_min_android" translatable="false">Min Version: Android 4.0 (Jelly Bean)</string>
    <string name="about_min_sdk" translatable="false">Min SDK Version: Level 14</string>

    <!-- ############# Settings ############# -->
    <string name="pref_select_language">Sprache wählen</string>
    <string name="pref_summary">Sprache wählen</string>


    <!-- ############# Buttons ############# -->
    <string name="login" translatable="false">Login</string>
    <string name="register">Registrieren</string>
    <string name="add">Hinzufügen</string>
    <string name="update">Aktualisieren</string>
    <string name="delete">Löschen</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="details">Details</string>
    <string name="search">Suchen</string>

    <string name="remember">merken</string>
    <string name="create">Account erstellen</string>

    <!-- ############# Messages & Notifications ############# -->
    <string name="msg_pwd_invalid">Passwort braucht mind. 5 Zeichen</string>
    <string name="msg_pwd_check">Passwort nicht gleich</string>
    <string name="msg_email_check">E-mail nicht gleich</string>
    <string name="msg_email_invalid">Bitte E-mail eingeben</string>
    <string name="msg_email_password_invalid" translatable="false">Mail and password incorrect</string>
    <string name="msg_person_id">Person ist bereits im System registriert</string>
    <string name="msg_person_added_regitry">Person hizugefügt</string>
    <string name="msg_user_updated">Nutzer aktualisiert</string>
    <string name="msg_account_deleted">Account wurde gelöscht</string>
    <string name="msg_changes_saved">Änderungen gespeichert</string>


    <!-- ############# Arrays ############# -->
    <string-array name="cantons_array">
        <item>Aargau</item>
        <item>Appenzell Ausserrhoden</item>
        <item>Appenzell Innerrhoden</item>
        <item>Basel-Landschaft</item>
        <item>Basel-Stadt</item>
        <item>Bern</item>
        <item>Freiburg</item>
        <item>Genf</item>
        <item>Glarus</item>
        <item>Glarus</item>
        <item>Jura</item>
        <item>Neuenburg</item>
        <item>Nidwalden</item>
        <item>Obwalden</item>
        <item>Schaffhausen</item>
        <item>Schwyz</item>
        <item>Solothurn</item>
        <item>St Gallen</item>
        <item>Tessin</item>
        <item>Thurgau</item>
        <item>Uri</item>
        <item>Waadt</item>
        <item>Wallis</item>
        <item>Zug</item>
        <item>Zürich</item>
    </string-array>
    <string name="zurich">Zurich</string>
    <string name="zug">Zug</string>
    <string name="wallis">Valais</string>
    <string name="waadt">Vaud</string>
    <string name="uri">Uri</string>
    <string name="thurgau">Thurgovie</string>
    <string name="tessin">Tessin</string>
    <string name="st_gallen">St. Gall</string>
    <string name="solothurn">Soleure</string>
    <string name="schwyz">Schwyz</string>
    <string name="schaffhausen">Schaffhouse</string>
    <string name="obwalden">Obwald</string>
    <string name="nidwalden">Nidwald</string>
    <string name="neuenburg">" Neuchâtel"</string>
    <string name="jura">Jura</string>
    <string name="genf" translatable="false">Genève</string>
    <string name="freiburg" translatable="false">Fribourg</string>
    <string name="bern" translatable="false">Berne</string>
    <string name="basel_Stadt" translatable="false">Bâle-Ville</string>
    <string name="basel_landschaft" translatable="false">Bâle-Campagne</string>
    <string name="aargau" translatable="false">Argovie</string>
    <string name="appenzell_Innerrhoden" translatable="false">Appenzell Rhodes-Intérieures</string>
    <string name="appenzell_ausserrhoden" translatable="false">Appenzell Rhodes-Extérieures</string>
    <string name="grisons" translatable="false">Grisons</string>
    <string name="glarus" translatable="false">Glaris</string>
    <string name="lucerne" translatable="false">Lucerne</string>
    <string name="canton_zurich">Zürich</string>

    <!-- Cloud -->
    <string name="status_emailpassword" translatable="false">status email password</string>
</resources>


