<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- Search, should appear as action button
    <item   android:id="@+id/action_search"
            android:icon="@drawable/ic_search_white_24dp"
            android:title="@string/action_search"
            app:showAsAction="ifRoom" />
            -->
    <item
        android:id="@+id/action_about"
        android:icon="@drawable/ic_info_white_24dp"
        android:title="@string/about"
        app:showAsAction="ifRoom|withText" />


    <!-- Settings, should always be in the overflow -->
    <item   android:id="@+id/action_settings1"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <!-- Settings, should always be in the overflow -->
    <item   android:id="@+id/action_logout"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/action_logout"
        app:showAsAction="never" />

</menu>