<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="600dp">

            <EditText
                android:id="@+id/text_ahv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tall"
                android:layout_above="@+id/text_firstname"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/ahv"
                android:inputType="number" />

            <EditText
                android:id="@+id/text_firstname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tall"
                android:layout_above="@+id/text_lastname"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/firstname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/text_lastname"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tall"
                android:layout_above="@+id/text_street"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/lastname"
                android:inputType="textPersonName" />

            <EditText
                android:id="@+id/text_street"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tall"
                android:layout_above="@+id/text_city"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/steet"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/text_zip"
                android:layout_width="100dp"
                android:layout_height="@dimen/height_tall"
                android:layout_above="@+id/text_phone"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/zip"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/text_city"
                android:layout_width="220dp"
                android:layout_height="@dimen/height_tall"
                android:layout_above="@+id/text_phone"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="textPostalAddress" />

            <EditText
                android:id="@+id/text_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tall"
                android:layout_above="@+id/text_birthday"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/phone"
                android:inputType="phone" />

            <EditText
                android:id="@+id/text_birthday"
                android:layout_width="match_parent"
                android:layout_height="@dimen/height_tall"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="@dimen/margin_left"
                android:layout_marginEnd="@dimen/margin_right"
                android:layout_marginBottom="@dimen/margin_bottom"
                android:ems="10"
                android:hint="@string/birthdate"
                android:inputType="date" />

        </RelativeLayout>

    </LinearLayout>

</ScrollView>